// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component should render correctly 1`] = `
<div>
  <div
    class="alert"
  />
</div>
`;

exports[`Alert component should support passing children into the component 1`] = `
<div>
  <div
    class="alert"
  >
    This is an alert
  </div>
</div>
`;
